fix: adjust z-index and background gradient in MouseFollowGradientBackground and ContactSection; refine background size and transition speed in globals.scss

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,10 +31,10 @@ select:-webkit-autofill:focus {
   height: 30%;
   height: calc(100vh - 64px - (1rem * 2));
   background: radial-gradient(circle, rgba(255, 255, 255, 0.4), transparent 50%) no-repeat;
-  background-size: 100% 100%;
+  background-size: 95% 95%;
   transform: translate(-50%, -50%);
   opacity: 0.2;
-  transition: 300ms ease;
+  transition: 100ms ease;
   user-select: none;
   pointer-events: none;
 }
